# ferrous-di

./: .cliff.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  API_STABILITY.md  ARCHITECTURE.md  BREAKING_CHANGES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPRECATION_GUIDELINES.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  VERSIONING_STRATEGY.md  clippy.toml  deny.toml  mutants-simple.toml  mutants.toml  rustfmt.toml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  coverage.yml  release.yml
benches/: di.rs
docs/: MIGRATION_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.md
examples/: async_factory_demo.rs  axum_minimal_test.rs  axum_multi_tenant.rs  enterprise_patterns.rs  modular_registration.rs  web_server_scope.rs
examples/durable-agent/: Cargo.toml  README.md
examples/durable-agent/src/: lib.rs  main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: dependency_injection.rs  service_registration.rs  service_resolution.rs
scripts/: generate-changelog.sh  publish.sh  release.sh
src/: aop.rs  async_di.rs  async_factories.rs  async_lifecycle.rs  axum_integration.rs  cancellation.rs  capabilities.rs  config.rs  debug.rs  decoration.rs  descriptors.rs  error.rs  fast_singletons.rs  graph_export.rs  key.rs  labeled_scopes.rs  lib.rs  lifetime.rs  metrics.rs  observer.rs  performance.rs  prewarm.rs  registration.rs  reliability.rs  scope_local.rs  validation.rs  web_integration.rs
src/collection/: mod.rs  module_system.rs
src/internal/: circular.rs  dispose_bag.rs  mod.rs
src/provider/: context.rs  mod.rs  scope.rs
src/traits/: dispose.rs  mod.rs  resolver.rs
tests/: advanced_features.rs  agent_features.rs  basics.rs  circular.rs  disposal.rs  integration_concurrent_access.rs  integration_full_application.rs  integration_memory_leaks.rs  modules.rs  multi.rs  property_registration.rs  property_resolution.proptest-regressions  property_resolution.rs  regression_benchmarks.rs  scopes.rs  simple_disposal_test.rs  unit_descriptors.rs  unit_error.rs  unit_key.rs
