[package]
name = "ferrous-di-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ferrous-di]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "service_registration"
path = "fuzz_targets/service_registration.rs"
test = false
doc = false
bench = false

[[bin]]
name = "service_resolution"
path = "fuzz_targets/service_resolution.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dependency_injection"
path = "fuzz_targets/dependency_injection.rs"
test = false
doc = false
bench = false
