[package]
name = "durable-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "durable-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Use the local ferrous-di with required features
ferrous-di = { path = "../..", features = ["async", "graph-export", "config"] }